bug 364731 - Windows x64 porting of bug 349002 - Refactor xptcall into a frozen API.  r=benjamin, sr=dougt